--- a/public/css/public.css
+++ b/public/css/public.css
@@ -3,13 +3,60 @@
  */
 
 .wcatcn-wrapper {
+	box-sizing: border-box;
 	position: fixed;
 	bottom: 0;
 	right: 0;
-	transform: translateX(100%);
 	transition: transform 1s;
+	z-index: 1000;
+	border: 3px solid #999;
+	padding: 1em;
+	width: 100%;
+	max-height: 40vh;
+	overflow-y: scroll;
+	background: white;
+}
+
+.wcatcn-wrapper.left,
+.wcatcn-wrapper.right {
+	width: auto;
+	max-height: 75vh;
+}
+.wcatcn-wrapper.left {
+	left: 0;
+	right: auto;
+	transform: translateX(-100%);
+	border-left: none;
+}
+.wcatcn-wrapper.right {
+	left: auto;
+	right: 0;
+	transform: translateX(100%);
+	border-right: none;
+}
+
+.wcatcn-wrapper.bottom {
+	top: auto;
+	bottom: 0;
+	border-bottom: none;
+}
+.wcatcn-wrapper.bottom:not(.left):not(.right) {
+	transform: translateY(100%);
+	border-left: none;
+	border-right: none;
+}
+
+.wcatcn-wrapper.top {
+	top: 0;
+	bottom: auto;
+	border-top: none;
+}
+.wcatcn-wrapper.top:not(.left):not(.right) {
+	transform: translateY(-100%);
+	border-left: none;
+	border-right: none;
 }
 
 .wcatcn-wrapper.active {
-	transform: none;
+	transform: none !important;
 }
