--- a/public/css/public.css
+++ b/public/css/public.css
@@ -76,6 +76,15 @@
 	font-family: 'wcatcn' !important;
 	display: inline-block;
 }
+
+.wcatcn-wrapper.top .wcatcn-dismiss:after {
+	content: "\e900";
+	margin-left: 1em;
+}
+.wcatcn-wrapper.bottom .wcatcn-dismiss:after {
+	content: "\e903";
+	margin-left: 1em;
+}
 .wcatcn-wrapper.right .wcatcn-dismiss:before {
 	content: "\e901";
 	margin-right: 1em;
